Se agrego el arbol pero no se pudo leer la tabla de simbolos

--- a/Wison/src/app/app.component.html
+++ b/Wison/src/app/app.component.html
@@ -45,5 +45,7 @@
   <br><br>
   <h2  style="background-color:DodgerBlue">RESULTADO</h2>
   <textarea style="background-color: white;outline-style: solid;outline-color: black; outline-width: 5px;" id="newText" matInput cols="100" rows="10" disabled>{{outPutParser}}</textarea>
+  <br><br><br>
+  <div id="tree" ></div>
 </main>
 
